# relay_control

./: CMakeLists.txt  README.md  partitions.csv  send.sh
main/: CMakeLists.txt  idf_component.yml  lib_header.cpp  lib_header.hpp  main.cpp
main/dev/light/: light.cpp  light.hpp
main/helper/: helper.cpp
main/inc/ethernet/: ethernet.cpp  ethernet.hpp  ethernet_manager.cpp  ethernet_manager.hpp
main/inc/mcp23017/: MCPManager.cpp  MCPManager.hpp  mcp23017.cpp  mcp23017.hpp
main/inc/webserver/: webserver.cpp  webserver.hpp
spiffs/: login.html  panel.html
