idf_component_register(
    SRCS 
        "main.cpp"
        "inc/ethernet/ethernet.cpp"
        "inc/mcp23017/mcp23017.cpp"
    INCLUDE_DIRS 
        "."
        "inc"
    REQUIRES 
        driver 
        esp_eth 
        esp_netif 
        lwip 
        espressif__enc28j60
        nvs_flash
        i2c_bus
        esp_timer
)